--- a/TODO
+++ b/TODO
@@ -3,13 +3,11 @@ Must do:
  * Make animation for heal
  * Startup screen
    * splash screen graphic
-   * key handling for starting game
  * End-game animations:
    * player dies
    * enemy dies
  * End-game screen:
    * end-game graphic
-   * key handling for restarting game
 
 Really want to do:
  * Design nicer player animations
@@ -32,3 +30,7 @@ Done:
    * Create keyboard menus
    * Write key handler for menu item selection
    * View inventory
+* Startup screen
+   * key handling for starting game
+* End-game screen:
+   * key handling for restarting game
